--- a/BasicSealBackend/appsettings.Development.json
+++ b/BasicSealBackend/appsettings.Development.json
@@ -1,9 +1,20 @@
 {
+  "ConnectionStrings": {
+    "DefaultMysqlConnection": "Server=localhost;Database=basicseal_database;User=basicseal;Password=akademiasovy;"
+  },
+  "AppSettings": {
+    "JWT": {
+      "Secret": "LgtzqTJZDnDRjPYXVyRXrbHRmxdcfzCT",
+      "ValidIssuer": "http://localhost:7556"
+    }
+  },
+  "https_port": 443,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
